# tinyim

./: CMakeLists.txt  README.md
tinyim/: type.h
tinyim/cmd_client/: CMakeLists.txt  client.cc  linenoise.c  linenoise.h
tinyim/server/access/: CMakeLists.txt  access.cc  access.proto  access_service.cc  access_service.h  server_list
tinyim/server/common/: messages.proto
tinyim/server/dbproxy/: CMakeLists.txt  db.sql  dbproxy.cc  dbproxy.proto  dbproxy_service.cc  dbproxy_service.h  test.cc
tinyim/server/idgen/: CMakeLists.txt  idgen.cc  idgen.h  idgen.proto  idgen_client.cc  idgen_client2.cc  idgen_server.cc
tinyim/server/logic/: CMakeLists.txt  logic.cc  logic.proto  logic_service.cc  logic_service.h
tinyim/util/: consistent_hash.h  error.cc  error.h  initialize.cc  initialize.h
